--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "bresource",
+  "type": "module",
+  "engines": {"node": ">=13.2.0"},
   "devDependencies": {
     "local-web-server": "*",
     "puppeteer": "*"
